--- a/materiais.css
+++ b/materiais.css
@@ -271,7 +271,7 @@ button:focus{
 
 
 
-h1 {
+h1, h2{
     font-family:"Roboto Condensed", "sans-serif";
     font-weight: 700;
     line-height: 1.4;
