--- a/materiais.css
+++ b/materiais.css
@@ -271,14 +271,16 @@ button:focus{
 
 
 
-h1, h2{
+h1{
     font-family:"Roboto Condensed", "sans-serif";
     font-weight: 700;
     line-height: 1.4;
     font-size: 2.5rem;
-    
+}
 
-    
+h2 {
+    font-family:"Roboto Condensed", "sans-serif";
+    font-weight: 700;
 }
 
 /* Navigation Bar */
@@ -411,15 +413,7 @@ h1, h2{
     
 }
 
-#services h1{
-    text-align: center;
-    margin-bottom: .5rem;
-    font-family: "Roboto Condensed", sans-serif;
-    font-weight: 700;
-    line-height: 1.2;
-    position: relative;
-    z-index: 1;
-}
+
 
 
 
@@ -493,7 +487,7 @@ p {
 
   h1 {
     font-family:"Roboto Condensed", "sans-serif";
-    font-weight: 700;
+    font-weight: 600;
     line-height: 1.4;
     font-size: 2rem;
     
@@ -709,6 +703,18 @@ p {
     
     padding: 20px; /* Espaçamento interno */
     margin: 0; /* Margem */
+  }
+
+  h2{
+    color: #fff; /* Cor do texto */
+    text-shadow: 0 0 10px #5f5959, 0 0 20px #5f5959, 0 0 30px #5f5959, 0 0 40px #fbff11, 0 0 70px #fbff11, 0 0 80px #fbff11, 0 0 100px #fbff11, 0 0 150px #fbff11; /* Sombra do texto */
+    
+    padding: 20px; /* Espaçamento interno */
+    margin: 0; /* Margem */
+  }
+
+  #contact h2 {
+    text-shadow: none;
   }
   
  .list{
