--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 #title {
     
-    background: radial-gradient(#f7dd00,#aa9a09);
+    background: radial-gradient(#f7dd00,#f7dd00);
    
     
     -webkit-animation: fadeIn 1 1s ease-out;
