--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 #title {
     
-    background: radial-gradient(#f7dd00,#f7dd00);
+    background-color:(#F7DE00,#f7dd00);
    
     
    
@@ -39,8 +39,8 @@
 
 
 h1 {
-    font-family:"Roboto Condensed", "sans-serif";
-    font-weight: 700;
+    font-family:"Poppins", "sans-serif";
+    font-weight: 800;
     line-height: 1.4;
     font-size: 2.5rem;
     
@@ -186,7 +186,7 @@ h1 {
 #services h1{
     text-align: center;
     margin-bottom: .5rem;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 700;
     line-height: 1.2;
     position: relative;
@@ -198,7 +198,7 @@ h1 {
 h3 {
 
     
-    font-family: "Roboto Condensed", "sans-serif";
+    font-family: "Poppins", "sans-serif";
     font-weight: 700;
     line-height: 1.2;
 
@@ -215,7 +215,7 @@ h3 {
 
 p {
     color: #8f8f8f;
-    font-family: "Monteserrat";
+    font-family: "Poppins";
   }
 
   .icon {
@@ -262,7 +262,7 @@ p {
   }
 
   h1 {
-    font-family:"Roboto Condensed", "sans-serif";
+    font-family:"Poppins", "sans-serif";
     font-weight: 700;
     line-height: 1.4;
     font-size: 2rem;
@@ -393,7 +393,7 @@ p {
 }
 
 .contactName{
-  font-family:"Roboto Condensed", "sans-serif";
+  font-family:"Poppins", "sans-serif";
     font-weight: 700;
     line-height: 1.5;
     font-size: 1.5rem;
@@ -419,5 +419,28 @@ p {
   text-align: center;
   
   
+}
+
+
+.whatsapp-button {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  width: 60px;
+  height: 60px;
+  background-color: green;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  text-decoration: none;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 4;
+}
+
+.whatsapp-button:hover {
+  background-color: darkgreen;
 }
 
