--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -602,6 +602,12 @@ header
     box-shadow: none;
     text-align: left;
   }
+
+  .header-area ul {
+    
+    text-align: center;
+  }
+
   .header-area .container {
     padding: 0px;
   }
