--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: "Poppins", "sans-serif";
 }
 
 /*--------------------------------------------------------------
@@ -326,7 +326,7 @@ h6 {
   position: absolute;
   top: 55px;
   right: 15px;
-  bottom: 300px;
+  bottom: 70%;
   left: 15px;
   padding: 10px 0;
   background-color: #fff;
