--- a/styleGame.css
+++ b/styleGame.css
@@ -58,6 +58,7 @@ h1 {
     font-family: "Poppins";
     font-size: 1.2rem;
     font-weight: bold;
+    font-size: 400;
     
     
 }
@@ -65,6 +66,7 @@ h1 {
 .nav-item {
 
     margin: 0px 15px;
+    font-size: 400;
     
 }
 
@@ -368,7 +370,7 @@ p {
 
 .contactName{
   font-family:"Poppins", "sans-serif";
-    font-weight: 700;
+    font-weight: 400;
     line-height: 1.5;
     font-size: 1.5rem;
 }
@@ -401,6 +403,7 @@ p {
 
   .materiaisTitle {
     text-align: center;
+    font-weight: 400;
   }
 
 
