--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -1902,8 +1902,8 @@ responsive
   position: fixed;
   right: 20px;
   bottom: 20px;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   background-color: green;
   color: white;
   border-radius: 50%;
@@ -1915,6 +1915,35 @@ responsive
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
   z-index: 4;
 }
+
+.instagram-button{
+  position: fixed;
+  right: 20px;
+  bottom: 80px;
+  width: 50px;
+  height: 50px;
+  background-color: rgb(151, 28, 38);
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  text-decoration: none;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 4;
+}
+
+.carousel-control-prev-icon, .carousel-control-next-icon {
+  height: 40px;
+  width: 40px;
+  outline: rgb(117, 117, 117);
+  background-color: rgba(92, 90, 90, 0.3);
+  background-size: 100%, 100%;
+  border-radius: 30%;
+  border: 1px solid rgb(138, 138, 138);
+}
+
 
 .whatsapp-button:hover {
   background-color: darkgreen;
@@ -1988,4 +2017,25 @@ responsive
   text-shadow: 0px 0px 8px #e2d774, 0px 0px 12px #ebdb4a;
 }
 
+.kitExclusivos {
+  position: relative;
+  color: white;
+  font-weight: 700;
+  font-size: 20px;
+  background-color: #787c8a;
+  padding: 10px 20px;
+  border-radius: 80px;
+  width: 250px;
+  box-shadow: 0px 2px 4px rgba(134, 134, 134, 0.3);
+  margin: 10px auto 10px auto;
 
+  text-shadow: 0px 0px 8px #e2d774, 0px 0px 12px #ebdb4a;
+}
+
+.myCards {
+  margin-top: 45px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: center;
+}
